--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Synth</title>
-    <script src="bundle.js"></script>
-</head>
-<body>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>#{name}</title><link type="text/css" rel="stylesheet" media="all" href="build/css/style.css"></head><body><h1>Hello webSynth-1</h1><script type="text/javascript" src="build/js/sequencer.js"></script></body></html>
